--- a/ground_segmentation.ipynb
+++ b/ground_segmentation.ipynb
@@ -690,87 +690,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "def plot_sample(X, y, preds, ix=None, prob=0.5, seed=None):\n",
-    "    \"\"\"Function to plot the results\"\"\"\n",
-    "    if ix is None:\n",
-    "        random.seed(seed)\n",
-    "        ix = random.randint(0, len(X)-1)\n",
-    "\n",
-    "    if y is not None:\n",
-    "        fig, ax = plt.subplots(1, 4, figsize=(20, 10))\n",
-    "    else:\n",
-    "        fig, ax = plt.subplots(1, 3, figsize=(20, 10))\n",
-    "        \n",
-    "    axis_index = 0\n",
-    "    ax[axis_index].imshow(X[ix])\n",
-    "    ax[axis_index].set_title('Raw Input')\n",
-    "    ax[axis_index].axis('off')\n",
-    "    axis_index += 1\n",
-    "\n",
-    "    if y is not None:\n",
-    "        ax[axis_index].imshow(y[ix].squeeze(), cmap='gray')\n",
-    "        ax[axis_index].set_title('Ground Truth')\n",
-    "        ax[axis_index].axis('off')\n",
-    "        axis_index += 1\n",
-    "    \n",
-    "    ax[axis_index].imshow(preds[ix].squeeze(), cmap='gray')\n",
-    "    ax[axis_index].set_title('Predicted Probability Map')\n",
-    "    ax[axis_index].axis('off')\n",
-    "    axis_index += 1\n",
-    "\n",
-    "    binary_preds = (preds > prob).astype(np.uint8)\n",
-    "    ax[axis_index].imshow(binary_preds[ix].squeeze(), cmap='gray')\n",
-    "    ax[axis_index].set_title('Predicted Binary Map (Prob > %.2f)' % (prob))\n",
-    "    ax[axis_index].axis('off')\n",
-    "    \n",
-    "def plot_samples(X, y, preds, indexs=None, num_samples=1, prob=0.5, seed=None):\n",
-    "    \"\"\"Function to plot the results\"\"\"\n",
-    "    if indexs is None:\n",
-    "        random.seed(seed)\n",
-    "        indexs = [random.randint(0, len(X)-1) for _ in range(num_samples)]\n",
-    "    else:\n",
-    "        num_samples = len(indexs)\n",
-    "        \n",
-    "    if y is not None:\n",
-    "        fig, ax = plt.subplots(num_samples, 4, figsize=(20, 10))\n",
-    "    else:\n",
-    "        fig, ax = plt.subplots(num_samples, 3, figsize=(20, 10))\n",
-    "    plt.subplots_adjust(hspace=0.1, wspace=0.1)    \n",
-    "    \n",
-    "    for i, ix in enumerate(indexs):\n",
-    "        axis_index = 0\n",
-    "        ax[i, axis_index].imshow(X[ix])    \n",
-    "        ax[i, axis_index].axis('off')\n",
-    "        if i == 0: ax[i, axis_index].set_title('Raw Input')\n",
-    "        axis_index += 1\n",
-    "        \n",
-    "        if y is not None:\n",
-    "            ax[i, axis_index].imshow(y[ix].squeeze(), cmap='gray')     \n",
-    "            ax[i, axis_index].axis('off')\n",
-    "            if i == 0: ax[i, axis_index].set_title('Ground Truth')\n",
-    "            axis_index += 1\n",
-    "        \n",
-    "        ax[i, axis_index].imshow(preds[ix].squeeze(), cmap='gray')     \n",
-    "        ax[i, axis_index].axis('off')\n",
-    "        if i == 0: ax[i, axis_index].set_title('Predicted Probability Map')\n",
-    "        axis_index += 1\n",
-    "        \n",
-    "        binary_preds = (preds > prob).astype(np.uint8)\n",
-    "        ax[i, axis_index].imshow(binary_preds[ix].squeeze(), cmap='gray')\n",
-    "        ax[i, axis_index].axis('off')        \n",
-    "        if i == 0: ax[i, axis_index].set_title('Predicted Binary Map (Prob > %.2f)' % (prob))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -779,7 +698,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.plot import plot_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -837,13 +765,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93ad9bd9d55345e1bf7c058929d6dbe9",
+       "model_id": "ffb054c9bdca4a82bb774778f2ba01e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -883,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -937,13 +865,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0d67dec02134d31be8edff6d0b86201",
+       "model_id": "5e156e3a9198495aa29c3147f45b5519",
        "version_major": 2,
        "version_minor": 0
       },
